<resources>
    <string name="app_name">Kotlillon</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_sliding_tabs">SlidingTabs example</string>
    <string name="title_activity_show_user">Created user data</string>
    <string name="title_activity_browse_url">Browse URL</string>

    <string name="label_name">Name:</string>
    <string name="label_age">Age:</string>
    <string name="label_text">Text:</string>
    <string name="label_encryption">Encryption:</string>

    <string name="button_show_user">SHOW USER</string>
    <string name="button_show_keyboard">SHOW KEYBOARD</string>
    <string name="button_hide_keyboard">HIDE KEYBOARD</string>
    <string name="button_md5">MD5</string>
    <string name="button_sha1">SHA1</string>
    <string name="button_sha256">SHA256</string>
</resources>
